Bugfix: composer attachments hard to see in dark mode

--- a/dev/Styles/Compose.less
+++ b/dev/Styles/Compose.less
@@ -18,14 +18,9 @@
 	}
 
 	.attachmentAreaParent {
-		padding: 10px 10px 6px 10px;
-		background: #ddd;
 		border-top: 1px solid #ccc;
-
 		overflow-y: auto;
-	}
-
-	.attachmentAreaParent {
+		padding: 10px 10px 6px 10px;
 
 		.no-attachments-desc {
 			padding: 50px 10px;
